Change link error
[BÀI 1] CÔNG THỨC TỌA ĐỘ VECTO

--- a/index.html
+++ b/index.html
@@ -3797,7 +3797,7 @@ mjx-stretchy-v mjx-c, mjx-stretchy-h mjx-c {
 </div>
 
 <div id="61562" class="item itemBaiHoc unwatched">
-    <a href="javascript:void(0)" type="changeVideo" watched="unwatched" isid="play61562" file="" file2="https://www.youtube.com/watch?v=BGh78wJl5RA" img="" idvimeo="" title="Video lí thuyết" class="name" style="color: #333">Video lí thuyết</a>
+    <a href="javascript:void(0)" type="changeVideo" watched="unwatched" isid="play61562" file="" file2="https://www.youtube.com/watch?v=GHd8cAjdGn0" img="" idvimeo="" title="Video lí thuyết" class="name" style="color: #333">Video lí thuyết</a>
     <div class="info" style="display:none">
         <span class="time">56:31</span>
         <span class="status">Chưa xem </span>
