--- a/index.html
+++ b/index.html
@@ -2222,7 +2222,7 @@ mjx-stretchy-v mjx-c, mjx-stretchy-h mjx-c {
             <img alt="" class="" src="./Khóa Chuyên đề Ôn thi THPT Quốc gia - 2004_files/no-avatar.gif">
         </a>
     </div>
-    <a class="name" href="https://thaychi.vn/khoa-hoc-cua-toi.htm"><span>Ngọc Ánh </span></a>
+    <a class="name" href="https://thaychi.vn/khoa-hoc-cua-toi.htm"><span>Vương đẹp trai </span></a>
 </div>
 
             
